tests/NormalTests/paczka1/fuzzy1/87835725.err
Error in line 7: dBj A211 51,2
Error in line 27: CUmUWQjS S711 24,9
Error in line 36: 4iPs S428 4,0
